--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,17 @@ android:
     - platform-tools
     - build-tools-27.0.3
     - android-27
+    - sys-img-armeabi-v7a-android-27
 
 licenses:
     - 'android-sdk-license-.+'
+    
+# Emulator Management: Create, Start and Wait
+before_script:
+    - echo no | android create avd --force -n test -t android-27 --abi armeabi-v7a
+    - emulator -avd test -no-audio -no-window &
+    - android-wait-for-emulator
+    - adb shell input keyevent 82 &
 
 script:
     - ./gradlew app:connectedAndroidTest
