--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,10 @@ android:
     - tools # see https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
     - platform-tools
     - build-tools-27.0.3
+    - android-22
     - android-24
     - android-27
+    - sys-img-armeabi-v7a-android-22
     - sys-img-armeabi-v7a-android-24
     - sys-img-armeabi-v7a-android-27
 
@@ -15,7 +17,8 @@ licenses:
     
 # Emulator Management: Create, Start and Wait
 before_script:
-    - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
+    - android list targets
+    - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
     - emulator -avd test -no-audio -no-window &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
