--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ licenses:
 before_script:
     - android list targets
     - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
-    - emulator -avd test -no-audio -no-window &
+    - emulator -avd test -no-window &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
 
