--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ android:
     - tools # see https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
     - platform-tools
     - build-tools-27.0.3
-    - android-22
     - android-24
     - android-27
     - sys-img-armeabi-v7a-android-24
@@ -22,5 +21,7 @@ before_script:
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
 
+# Run instrumentation and unit tests
 script:
     - ./gradlew app:connectedAndroidTest
+    - ./gradlew app:test
