--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,11 @@ jobs:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
-          name: Run Tests
+          name: Run Unit Tests
           command: ./gradlew lint test
+      - run:
+          name: Run Instrument Tests
+          command: ./gradlew app:connectedAndroidTest
       - store_artifacts:
           path: app/build/reports
           destination: reports
