--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: android
+jdk: oraclejdk8
 
 android:
   components:
     - tools
     - platform-tools
+    - tools
     - build-tools-28.0.3
     - android-28
     - sys-img-armeabi-v7a-android-28
