--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,12 @@ jdk: oraclejdk8
 android:
   components:
     - tools
-    - platform-tools
     - tools
+    - platform-tools
     - build-tools-28.0.3
+    - android-24
     - android-28
+    - sys-img-armeabi-v7a-android-24
     - sys-img-armeabi-v7a-android-28
 
 licenses:
@@ -16,14 +18,14 @@ licenses:
 # Emulator Management: Create, Start and Wait
 before_script:
     - android list targets
-    - echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a
+    - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
     - emulator -avd test -no-window &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
 
 # Run instrumentation and unit tests
 script:
-    - ./gradlew app:clean
-    - ./gradlew app:test
-    - ./gradlew app:connectedAndroidTest
+    - ./gradlew clean
+    - ./gradlew test
+    - ./gradlew connectedAndroidTest
     
