--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,27 @@
 language: android
 jdk: oraclejdk8
-
 android:
   components:
-    - tools
-    - tools
-    - platform-tools
-    - build-tools-28.0.3
-    - android-24
-    - android-28
-    - sys-img-armeabi-v7a-android-24
-    - sys-img-armeabi-v7a-android-28
-
+  - tools
+  - tools
+  - platform-tools
+  - build-tools-28.0.3
+  - android-24
+  - android-28
+  - sys-img-armeabi-v7a-android-24
+  - sys-img-armeabi-v7a-android-28
 licenses:
-    - 'android-sdk-license-.+'
-    
-# Emulator Management: Create, Start and Wait
+- android-sdk-license-.+
 before_script:
-    - android list targets
-    - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
-    - emulator -avd test -no-window &
-    - android-wait-for-emulator
-    - adb shell input keyevent 82 &
-
-# Run instrumentation and unit tests
+- android list targets
+- echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
+- emulator -avd test -no-window &
+- android-wait-for-emulator
+- adb shell input keyevent 82 &
 script:
-    - ./gradlew clean
-    - ./gradlew test
-    - ./gradlew connectedAndroidTest
-    
+- "./gradlew clean"
+- "./gradlew test"
+- "./gradlew connectedAndroidTest"
+before_install:
+- openssl aes-256-cbc -K $encrypted_688a122d5d51_key -iv $encrypted_688a122d5d51_iv
+  -in keystore.enc -out keystore -d
