--- a/.gitignore
+++ b/.gitignore
@@ -192,7 +192,7 @@ atlassian-ide-plugin.xml
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
-fabric.properties
+#fabric.properties
 
 ### AndroidStudio Patch ###
 
